feat: implementar registro de usuario y actualizar enlaces en las plantillas

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -16,7 +16,7 @@
                 <div class="error-description">
                     La página que estás buscando puede haber sido eliminada, su nombre ha cambiado o no está disponible temporalmente.
                 </div>
-                <a href="../index.html" class="auth-button primary">Volver al Inicio</a>
+                <a href="../login" class="auth-button primary">Volver al Inicio</a>
             </div>
         </div>
     </div>
