--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -16,7 +16,7 @@
                 <div class="error-description">
                     Lo sentimos, ha ocurrido un problema técnico. Nuestros ingenieros ya están trabajando para solucionarlo lo antes posible.
                 </div>
-                <a href="../index.html" class="auth-button primary">Volver al Inicio</a>
+                <a href="../login" class="auth-button primary">Volver al Inicio</a>
             </div>
         </div>
     </div>
