--- a/app/templates/reset-password-request.html
+++ b/app/templates/reset-password-request.html
@@ -35,7 +35,7 @@
             </form>
             
             <div class="auth-link">
-                <p>¿Recuerdas tu contraseña? <a href="login.html">Iniciar sesión</a></p>
+                <p>¿Recuerdas tu contraseña? <a href="login">Iniciar sesión</a></p>
             </div>
         </div>
     </div>
