--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -16,7 +16,7 @@
                 <div class="error-description">
                     Lo sentimos, no podemos permitirte acceder a esta página porque no tienes los permisos necesarios.
                 </div>
-                <a href="../index.html" class="auth-button primary">Volver al Inicio</a>
+                <a href="../login" class="auth-button primary">Volver al Inicio</a>
             </div>
         </div>
     </div>
