--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -14,9 +14,9 @@
         </div>
         <nav class="main-nav">
             <ul>
-                <li><a href="#" class="active">Inicio</a></li>
-                <li><a href="#">Chat con Inklú</a></li>
-                <li><a href="#">Configuración</a></li>
+                <li><a href="{{url_for('viewpages.dashboard') }}" class="active">Inicio</a></li>
+                <li><a href="{{ url_for('viewpages.chat') }}">Chat con Inklú</a></li>
+                <li><a href="{{ url_for('viewpages.reset_password_request') }}">Configuración</a></li>
             </ul>
         </nav>
         <div class="user-menu">
