--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="{{url_for('viewpages.dashboard') }}" class="active">Inicio</a></li>
                 <li><a href="{{ url_for('viewpages.chat') }}">Chat con Inklú</a></li>
-                <li><a href="{{ url_for('viewpages.reset_password_request') }}">Configuración</a></li>
+                <li><a href="{{ url_for('viewpages.configuration') }}">Configuración</a></li>
             </ul>
         </nav>
         <div class="user-menu">
