fix: cambiar botón de cerrar sesión a enlace para mejorar la navegación

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,7 +22,7 @@
         <div class="user-menu">
             <div class="user-info">
                 <span id="userDisplayName">Usuario</span>
-                <button id="logoutButton" class="logout-button">Cerrar sesión</button>
+                <a href="{{ url_for('viewpages.login') }}" id="logoutButton" class="logout-button">Cerrar sesión</a>
             </div>
         </div>
     </header>
