CAMBIOS SOBRE NAVEGACION

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="{{url_for('viewpages.dashboard') }}">Inicio</a></li>
                 <li><a href="{{ url_for('viewpages.chat') }}" class="active">Chat con Inklú</a></li>
-                <li><a href="{{ url_for('viewpages.reset_password_request') }}">Configuración</a></li>
+                <li><a href="{{ url_for('viewpages.configuration') }}">Configuración</a></li>
             </ul>
         </nav>
         <div class="user-menu">
